--- a/package.json
+++ b/package.json
@@ -11,12 +11,8 @@
   ],
   "devDependencies": {
     "husky": "^7.0.2",
-    "lint-staged": "^11.1.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.3.2"
   },
   "lint-staged": {
     "*.{js,json,css,md}": [
