--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "build": "tsc",
+    "start": "ts-node index.ts",
     "dev": "nodemon --config nodemon.json"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@polkadot/api": "^5.6.2-5",
     "@polkadot/rpc-core": "^5.6.2-5",
     "commander": "^8.1.0",
+    "mongodb": "^4.1.1",
     "winston": "^3.3.3"
   }
 }
