--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -20,6 +20,7 @@
     "@parallel-finance/api": "^1.1.2",
     "@polkadot/api": "^5.6.2-5",
     "@polkadot/rpc-core": "^5.6.2-5",
+    "@polkadot/types": "^5.6.2-5",
     "commander": "^8.1.0",
     "mongodb": "^4.1.1",
     "ts-transformer-keys": "^0.4.3",
