--- a/packages/scan/tsconfig.json
+++ b/packages/scan/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
+    "strictNullChecks": true,
     "moduleResolution": "Node",
     "module": "commonjs",
     "outDir": "./releases",
