--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node index.ts",
-    "dev": "nodemon --config nodemon.json"
+    "dev": "docker run -d --rm --name scan-dev -p 27017:27017 mongo:4.2.16-rc0-bionic && nodemon --config nodemon.json"
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
