--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: packages/scan
-          file: Dockerfile
+          file: packages/scan/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_ORGNAME }}/parallel-scan:${{ steps.docker_tag.outputs.value }}
       - name: Image digest
