--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -8,10 +8,15 @@
     "scripts": {
         "build": "tsc",
         "start": "ts-node index.ts",
-        "dev": "docker run -d --rm --name scan-dev -p 27017:27017 mongo:4.2.16-rc0-bionic && nodemon --config nodemon.json"
+        "dev": "docker run -d --rm --name scan-dev -p 27017:27017 mongo:4.2.16-rc0-bionic && nodemon --config nodemon.json",
+        "lint": "eslint . --ext .ts"
     },
     "devDependencies": {
         "@types/node": "^16.7.10",
+        "@typescript-eslint/eslint-plugin": "^4.31.1",
+        "@typescript-eslint/parser": "^4.31.1",
+        "eslint": "^7.32.0",
+        "gulp": "^4.0.2",
         "nodemon": "^2.0.12",
         "ts-node": "^10.2.1",
         "typescript": "^4.4.2"
