--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "eslint": "^7.32.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2"
@@ -19,5 +22,9 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "scripts": {
+    "lint": "eslint --max-warnings 0 . --ext .ts",
+    "lint-and-fix": "eslint --max-warnings 0 . --ext .ts --fix"
   }
 }
