--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,11 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
-  ]
+  ],
+  rules: {
+    "@typescript-eslint/no-namespace": "off",
+    '@typescript-eslint/explicit-module-boundary-types': ['off'],
+    '@typescript-eslint/no-non-null-assertion': 'off',
+    no-constant-condition: ["error", { "checkLoops": false }]
+  }
 }
