--- a/.eslintrc
+++ b/.eslintrc
@@ -9,10 +9,10 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
-  rules: {
+  "rules": {
     "@typescript-eslint/no-namespace": "off",
-    '@typescript-eslint/explicit-module-boundary-types': ['off'],
-    '@typescript-eslint/no-non-null-assertion': 'off',
-    no-constant-condition: ["error", { "checkLoops": false }]
+    "@typescript-eslint/explicit-module-boundary-types": ["off"],
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "no-constant-condition": ["error", { "checkLoops": false }]
   }
 }
