:recycle: Fix jest with notests

--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "scripts": {
         "lint": "eslint --max-warnings 0 . --ext .ts",
         "lint-and-fix": "eslint --max-warnings 0 . --ext .ts --fix",
-        "test": "jest"
+        "test": "jest --passWithNoTests"
     }
 }
