--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "@parallel-finance/scan",
-  "version": "1.0.0",
-  "description": "Parallel scanner",
-  "author": "Parallel Authors",
-  "license": "private",
-  "private": true,
-  "scripts": {
-    "build": "tsc",
-    "start": "ts-node index.ts",
-    "dev": "docker run -d --rm --name scan-dev -p 27017:27017 mongo:4.2.16-rc0-bionic && nodemon --config nodemon.json",
-    "make-image": "yarn build && docker build -t parallel-scan:latest ."
-  },
-  "devDependencies": {
-    "@types/node": "^16.7.10",
-    "nodemon": "^2.0.12",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2"
-  },
-  "dependencies": {
-    "@parallel-finance/api": "^1.1.2",
-    "@polkadot/api": "^5.6.2-5",
-    "@polkadot/rpc-core": "^5.6.2-5",
-    "@polkadot/types": "^5.6.2-5",
-    "commander": "^8.1.0",
-    "mongodb": "^4.1.1",
-    "winston": "^3.3.3"
-  }
+    "name": "@parallel-finance/scan",
+    "version": "1.0.0",
+    "description": "Parallel scanner",
+    "author": "Parallel Authors",
+    "license": "private",
+    "private": true,
+    "scripts": {
+        "build": "tsc",
+        "start": "ts-node index.ts",
+        "dev": "docker run -d --rm --name scan-dev -p 27017:27017 mongo:4.2.16-rc0-bionic && nodemon --config nodemon.json",
+        "make-image": "yarn build && docker build -t parallel-scan:latest ."
+    },
+    "devDependencies": {
+        "@types/node": "^16.7.10",
+        "nodemon": "^2.0.12",
+        "ts-node": "^10.2.1",
+        "typescript": "^4.4.2"
+    },
+    "dependencies": {
+        "@parallel-finance/api": "^1.1.2",
+        "commander": "^8.1.0",
+        "lodash": "^4.17.21",
+        "mongodb": "^4.1.1",
+        "winston": "^3.3.3"
+    }
 }
