--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -25,6 +25,7 @@
     "@polkadot/rpc-core": "^5.6.2-5",
     "@polkadot/types": "^5.6.2-5",
     "commander": "^8.1.0",
+    "dotenv": "^10.0.0",
     "mongodb": "^4.1.1",
     "winston": "^3.3.3"
   }
