--- a/packages/scan/.env.sample
+++ b/packages/scan/.env.sample
@@ -1,4 +1,5 @@
-VERSION=0.0.1
+VERSION=0.1.0
 PARALLEL_ENDPOINT=wss://testnet-relay-rpc.parallel.fi
+MONGO_URL=mongodb://mongo:27017
 BLOCK_NUMBER=352453
 BUSINESS=referral
