--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -11,7 +11,7 @@
     "dev:db": "docker run -d --rm --name scan-dev -p 27017:27017 mongo:4.2.16-rc0-bionic",
     "dev:db-stop": "docker stop scan-dev",
     "dev": "docker run -d --rm --name scan-dev -p 27017:27017 mongo:4.2.16-rc0-bionic && nodemon --config nodemon.json",
-    "make-image": "yarn build && docker build -t parallel-scan:latest ."
+    "make-image": "docker build -t parallel-scan:latest ."
   },
   "devDependencies": {
     "@types/node": "^16.7.10",
@@ -24,7 +24,6 @@
     "@polkadot/rpc-core": "^5.6.2-5",
     "@polkadot/types": "^5.6.2-5",
     "typescript": "^4.4.2",
-    "commander": "^8.1.0",
     "dotenv": "^10.0.0",
     "mongodb": "^4.1.1",
     "winston": "^3.3.3"
