--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -19,10 +19,9 @@
     "ts-node": "^10.2.1"
   },
   "dependencies": {
-    "@parallel-finance/api": "^1.1.2",
-    "@polkadot/api": "^5.6.2-5",
-    "@polkadot/rpc-core": "^5.6.2-5",
-    "@polkadot/types": "^5.6.2-5",
+    "@polkadot/api": "6.2.1",
+    "@polkadot/rpc-core": "6.2.1",
+    "@polkadot/types": "6.2.1",
     "dotenv": "^10.0.0",
     "mongodb": "^4.1.1",
     "typescript": "^4.4.2",
